reactor: readme
